--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
             <div class="carousel-inner carouselmarco">
               <div class="carousel-item active">
                 <img src="./img/PerrosJugando.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h5 class="carouseltext">Socializacion</h5>
                   <p class="carouseltext">Durante los primeros meses de vida, es una de las cosas mas importantes para tener un perro emocionalmente estable a largo plazo.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./img/beagledurmiendo.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h5 class="carouseltext">Dulces sueños</h5>
                   <p class="carouseltext">Los perros pueden llegar a dormir hasta 12 horas al dia, te compartimos algunos consejos para que tu mascota tenga comodos y dulces sueños.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./img/perroplato.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                   <h5 class="carouseltext">Alimentacion</h5>
                   <p class="carouseltext">Natural o pienso? Esas preguntas y mas sobre la alimentacion de tu perro.</p>
                 </div>
