--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
               <div class="carousel-item active">
                 <img src="./img/PerrosJugando.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5 class="carouseltext">Socializacion</h5>
-                  <p class="carouseltext">Durante los primeros meses de vida, es una de las cosas mas importantes para tener un perro emocionalmente estable a largo plazo.</p>
+                  <h5 class="carouseltitletext">Socializacion</h5>
+                  <p class="carouselptext">Durante los primeros meses de vida, es una de las cosas mas importantes para tener un perro emocionalmente estable a largo plazo.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./img/beagledurmiendo.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5 class="carouseltext">Dulces sueños</h5>
-                  <p class="carouseltext">Los perros pueden llegar a dormir hasta 12 horas al dia, te compartimos algunos consejos para que tu mascota tenga comodos y dulces sueños.</p>
+                  <h5 class="carouseltitletext">Dulces sueños</h5>
+                  <p class="carouselptext">Los perros pueden llegar a dormir hasta 12 horas al dia, te compartimos algunos consejos para que tu mascota tenga comodos y dulces sueños.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./img/perroplato.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
-                  <h5 class="carouseltext">Alimentacion</h5>
-                  <p class="carouseltext">Natural o pienso? Esas preguntas y mas sobre la alimentacion de tu perro.</p>
+                  <h5 class="carouseltitletext">Alimentacion</h5>
+                  <p class="carouselptext">Natural o pienso? Esas preguntas y mas sobre la alimentacion de tu perro.</p>
                 </div>
               </div>
             </div>
